lots of bugs squashed

--- a/Coding/Stylesheets/common.css
+++ b/Coding/Stylesheets/common.css
@@ -7,8 +7,12 @@ It contains styles relevant to the page as a whole, and to both MS views.
   display: none;
 }
 
-.syntagm, .punct, .indexHeadword {
+.chunk, .syntagm, .punct, .indexHeadword {
   font-family: "Times New Roman", serif;
+}
+
+.pageAnchor, .lineBreak {
+  font-family: "Helvetica Neue", sans-serif;
 }
 
 .chunk {
