--- a/Coding/Stylesheets/diplomatic.css
+++ b/Coding/Stylesheets/diplomatic.css
@@ -53,9 +53,8 @@ It contains styles relevant to just the diplomatic view.
   display: none;
 }
 
-.corr, .supplied {
-  display: none; /*  careful with how this interacts with headword search! */
+.supplied {
   color: red;
+  display: none;
 }
-
 
