--- a/Coding/Stylesheets/semiDiplomatic.css
+++ b/Coding/Stylesheets/semiDiplomatic.css
@@ -68,7 +68,3 @@ It contains styles relevant to just the semi-diplomatic view.
   margin: -15px 0 5px 20px;
   display: none;
 }
-
-.corr, .supplied {
-  display: inline; /*  careful with how this interacts with headword search! */
-}
